<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/newRoundDialog">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_round_wa_indoor"
                    android:id="@+id/indoorRadioButton"
                    android:checked="true"
                    android:onClick="onRadioChanged"/>

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_round_wa_outdoor"
                    android:id="@+id/outdoorRadioButton"
                    android:checked="false"
                    android:onClick="onRadioChanged"/>

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_round_liga"
                    android:id="@+id/ligaRadioButton"
                    android:checked="false"
                    android:onClick="onRadioChanged"/>

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_round_custom"
                    android:id="@+id/customRadioButton"
                    android:checked="false"
                    android:onClick="onRadioChanged"/>

            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_round_amount"
                    android:id="@+id/endsLabel"
                    android:layout_gravity="center"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:text="10"
                    android:id="@+id/endsEditText"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:gravity="center_horizontal" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_round_preparation"
                    android:id="@+id/preparationLabel"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/preparationEditText"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:text="10"
                    android:enabled="false" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/new_round_duration"
                    android:id="@+id/durationLabel"
                    android:layout_weight="1" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/durationEditText"
                    android:text="120"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:gravity="center_horizontal" />
            </LinearLayout>

            <CheckBox
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_round_groups"
                android:id="@+id/groupsCheckbox"
                android:checked="true"
                android:enabled="false" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
